--- a/tup-lc2-votacion-app/css/pages/informes.css
+++ b/tup-lc2-votacion-app/css/pages/informes.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
 
+.header-page{
+    background-color: rgb(76, 141, 214);
+
+
+}
+
+
+
 thead{
     text-align: center;
     color: black;
