--- a/tup-lc2-votacion-app/css/common.css
+++ b/tup-lc2-votacion-app/css/common.css
@@ -14,11 +14,13 @@ body{
     width: 200px;
     height: 50px;
     padding: 1%;
+    margin-left: 20px;
 }
 
 .informes-header{
     background-color: #333;
     padding: 10px;
+
 }
 
 .informes-header button{
@@ -28,6 +30,8 @@ body{
     border: none;
     border-radius: 20px;
     border-color: white;
-    border-style: solid;
+    border-style: solid ;
+    border-width: 2px;
+    margin-right: 50px;
 }
 
