--- a/tup-lc2-votacion-app/css/common.css
+++ b/tup-lc2-votacion-app/css/common.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
+
 
 body{
     margin: 0;
@@ -17,21 +19,53 @@ body{
     margin-left: 20px;
 }
 
-.informes-header{
+.header-low{
     background-color: #333;
-    padding: 10px;
+    padding: 5px;
+}
+.consultar-header{
+    color: white;
+    font: #FFF;
 
 }
 
-.informes-header button{
-    background-color: #333; 
-    color: #333; 
-    padding: 5px 20px;
-    border: none;
-    border-radius: 20px;
+.linkpaso-header{
+    color: white;
+    background-color: magenta;
+    background-size: 110%;
+    border-radius: 5px;
+    padding: 5px;
+    font: #FFF;
+    font-size: 12px;
+    margin-left: 20px;
+    margin-right: 10px;
+    
+    
+    
+}
+
+.linkgenerales-header{
+    color: white;
+    background-color: skyblue;
+    border-radius: 5px;
+    padding: 5px;
+    font: #FFF;
+    font-size: 12px;
+    margin-right: 10px;
+
+}
+
+.linkinformes-header{
+    color: white;
+    background-color: #333;
+    border-radius: 15px;
     border-color: white;
-    border-style: solid ;
-    border-width: 2px;
-    margin-right: 50px;
+    border-width: 1px;
+    padding: 5px;
+    font: #FFF;
+    font-size: 10px;
+    border-style: solid;
+
+
 }
 
