--- a/tup-lc2-votacion-app/css/pages/index.css
+++ b/tup-lc2-votacion-app/css/pages/index.css
@@ -35,23 +35,55 @@
     border-style: none;
 }
 
-.imagen-electoral{
+
+.sec-titulo{
+    display: flex;
+    margin-left: 100px;
+    margin-right: 100px;
+
+}
+
+.large-text {
+    display: flex;
+    flex-basis: 45%; 
+    margin-right: 20px; 
+    
+}
+
+.imagen-electoral img {
     margin: 15px;
+    max-width: 350px;
     width: 350px;
+    height: auto;
 }
 
-.table-general{
-    margin-left: 80px;
+.sec-contenido{
+    margin-left: 100px;
 }
 
-.table-resultados{
+footer{
+    background-color: rgb(59, 59, 59);
+    color: rgb(99, 96, 96);
     display: flex;
-    justify-content: flex-start; /* El contenido se alinea hacia la izquierda */
-    align-items: center;
+    
 }
 
-.table-informacion{
-    display: flex;
-    justify-content: flex-start; /* El contenido se alinea hacia la izquierda */
-    align-items: center;
+.Ministerio{
+    width: 150px;
+    height: 45px;
+}
+
+.logoFooter{
+    width: 150px;
+    height: 45px;
+}
+
+.logos{
+    width: 150px;
+    height: 45px;
+}
+
+h4{
+    flex-direction: row-reverse;
+    font-size: 15px;
 }
