--- a/tup-lc2-votacion-app/css/pages/informes.css
+++ b/tup-lc2-votacion-app/css/pages/informes.css
@@ -55,7 +55,7 @@
     border-width: 1px;
     padding: 5px;
     font: #FFF;
-    font-size: 10px;
+    font-size: 15px;
     border-style: solid;
     flex-direction: row-reverse;
 
@@ -177,6 +177,7 @@ footer{
     background-color: rgb(59, 59, 59);
     color: rgb(99, 96, 96);
     display: flex;
+    padding: 40px;
     
 }
 
