--- a/tup-lc2-votacion-app/css/pages/generales.css
+++ b/tup-lc2-votacion-app/css/pages/generales.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+* {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
 .container-menu {
-    display: flex;
     background-color: #333;
-    height: 40px;
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 30px;
+    padding: 5px 10px;
 }
 
 .container-logo {
@@ -15,3 +22,112 @@
     height: 40px;
     width: auto;
 }
+
+li {
+    display: inline-block;
+    list-style: none;
+    padding: 5px 10px;
+    justify-content: center;
+    margin-right: 15px;
+}
+
+header .container-menu .menu-nav select {
+    background-color: #333;
+    border: none;
+    color: white;
+    font-weight: 500;
+    text-decoration: none;
+    font-size: medium;
+    appearance: none;
+    width: 50px;
+}
+
+input {
+    background-color: #c8d0d9;
+    color: #fff;
+    border: none;
+    text-align: center;
+    border-radius: 50px;
+    padding: 10px 2px;
+    color: #333;
+    width: 100px;
+    cursor: pointer;
+    font-size: 10px;
+
+}
+
+header .container-menu .menu-nav ul .boton-informes {
+    background-color: #333;
+    color: #fff;
+    border: solid;
+    text-align: center;
+    border-radius: 50px;
+    padding: 8px 30px;
+    width: 100px;
+    text-decoration: none;
+    font-size: 10px;
+    border-width: 1px;
+    margin-left: 10px;
+}
+
+header .container-menu .menu-nav ul .boton-inicio {
+    background-color: hsla(0, 0%, 100%, 0.63);
+    color: black;
+    font-weight: 800;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 35px;
+    font-size: small;
+    margin-left: 560px;
+    text-decoration: none;
+    justify-content: center;
+    align-self: center;
+    align-items: center;
+}
+
+/*ul li :last-child {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+#lupa{
+    font-size: small;
+    position: absolute;
+    left: 8px;
+
+}*/
+
+#distrito{
+    width: auto;
+}
+
+body {
+    background-color: rgba(201, 243, 229, 0.963);
+}
+
+main p {
+    
+    color: rgb(0, 0, 253);
+}
+
+#sec-titulo {
+    margin-left: 20px;
+}
+
+.add-informe {
+    background-color: hsla(0, 1%, 51%, 0.923);
+    color: rgb(255, 255, 255);
+    font-weight: 800;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 35px;
+    font-size: small;
+    margin-left: 20px;
+    text-decoration: none;
+    justify-content: initial;
+    align-self: center;
+    align-items: center;
+}
+
