--- a/tup-lc2-votacion-app/css/pages/generales.css
+++ b/tup-lc2-votacion-app/css/pages/generales.css
@@ -251,6 +251,7 @@ table caption {
     padding: 5px;
     display: flex;
     justify-content: initial;
+    transform: rotate(180deg);
 }
 
 .bar {
