--- a/tup-lc2-votacion-app/css/pages/paso.css
+++ b/tup-lc2-votacion-app/css/pages/paso.css
@@ -1,264 +1,365 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 
 * {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    --magenta: #ee3d8f;
+    --celeste: #37bbed;
+    --morado: #9283be;
+    --gris-claro: #9e9e9e;
+    --titulos: #333;
+    --textos: #333;
+    --fondo-pantalla: rgb(235, 245, 251);
+    --fondo-Cabecera: #18a0fb;
+    --fondo-Footer: #333;
+    --fondo-Menu: #333;
+    --texto-footer: #9e9e9e;
+    --titulo-Grilla: #727272;
+    --borde-inferior-Grilla: #727272;
+    --borde-Grilla: #c5c5c5;
+    --grafica-amarillo: rgb(252, 210, 0);
+    --grafica-amarillo-claro: rgba(252, 210, 0, 0.3);
+    --grafica-celeste: rgb(0, 169, 232);
+    --grafica-celeste-claro: rgba(0, 169, 232, 0.3);
+    --grafica-bordo: rgb(171, 40, 40);
+    --grafica-bordo-claro: rgba(171, 40, 40, 0.3);
+    --grafica-lila: rgb(112, 76, 159);
+    --grafica-lila-claro: rgba(112, 76, 159, 0.5);
+    --grafica-lila2: rgb(77, 46, 110);
+    --grafica-lila2-claro: rgba(77, 46, 110, 0.5);
+    --grafica-gris: rgb(128, 128, 128);
+    --grafica-gris-claro: rgb(128, 128, 128, 0.5);
+    --grafica-verde: rgb(102, 171, 60);
+    --grafica-verde-claro: rgba(102, 171, 60, 0.5);
+    --mensaje-usuario-amarillo: #ffc107;
+    --mensaje-usuario-verde: #28a745;
+    --mensaje-usuario-rojo: #dc3545;
 }
 
-header {
-    display: block;
-    justify-content: center;
-    align-items: center;
+
+* {
+    font-family: 'Roboto';
 }
 
-.container-menu {
-    background-color: #333;
-    display: block;
-    justify-content: space-around;
-    padding: 1px;
+p {
+    font-size: 12px;
+
 }
 
-.container-logo {
-    display: flex;
-    background-color: rgb(76, 141, 214);
-    height: auto;
+h1 {
+    font-size: 26px;
+    padding-bottom: 20px;
+}
+
+h2 {
+    font-size: 22px;
+}
+
+h3 {
+    font-size: 18px;
 }
 
 .logo {
-    height: 40px;
-    width: auto;
+    background-color: var(--fondo-Cabecera);
+    width: 150px;
+    height: auto;
 }
 
-header li {
-    display: inline-block;
-    list-style: none;
-    padding: auto;
-    justify-content: center;
+.container-logo {
+    width: 100%;
+    background-color: var(--fondo-Cabecera);
 }
 
-header .container-menu .menu-nav select {
-    background-color: #333;
-    border: none;
-    color: white;
-    font-weight: 500;
-    text-decoration: none;
-    font-size: medium;
-    appearance: none;
-    width: 50px;
-    margin-bottom: auto;
-}
-
-#filtrar {
-    background-color: #c8d0d9;
-    color: #fff;
-    border: none;
-    text-align: center;
-    border-radius: 50px;
-    padding: 10px 5px;
-    color: #333;
-    width: 100px;
-    cursor: pointer;
-    font-size: 10px;
-
-}
-
-header .container-menu .menu-nav ul .boton-informes {
-    background-color: #333;
-    color: #fff;
-    border: solid;
-    text-align: center;
-    border-radius: 50px;
-    padding: 8px 30px;
-    width: 100px;
-    text-decoration: none;
-    font-size: 10px;
-    border-width: 1px;
-    margin-left: 10px;
-}
-
-header .container-menu .menu-nav ul .boton-inicio {
-    background-color: hsla(0, 0%, 100%, 0.63);
-    color: black;
-    font-weight: 800;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 35px;
-    font-size: small;
-    margin-left: 560px;
-    text-decoration: none;
-    justify-content: center;
-    align-self: center;
-    align-items: center;
-}
-
-/*ul li :last-child {
+.menu-nav {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    position: relative;
+    background-color: var(--fondo-Menu);
+    margin-top: 0;
+    text-align: center;
+    width: 100%;
 }
 
-#lupa{
-    font-size: small;
-    position: absolute;
-    left: 8px;
-
-}*/
-
-#distrito {
-    width: auto;
+.contenido-menu {
+    margin-top: 10px;
+    padding: 5px;
+    padding-bottom: 10px;
+    margin-left: 13px;
+    margin-right: 13px;
+    float: left;
+    width: max-content;
 }
 
-body {
-    background-color: rgba(201, 243, 229, 0.963);
+select {
+    background: transparent;
+    border: none;
+    font-size: 18px;
+    text-align: center;
+    color: var(--celeste);
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+    transition: color 0.3s ease;
+
 }
 
-main p {
-    color: rgb(0, 0, 253);
+select:hover {
+    color: white;
 }
 
-#sec-titulo {
-    margin-left: 20px;
+.filtrar {
+    background-color: white;
+    text-transform: uppercase;
+    border-radius: 15px;
+    padding: 5px;
+    margin-top: -3px;
+}
+
+.input-filtrar {
+    border: none;
+    text-align: center;
+    width: 70px;
+    outline: none;
+    font-size: 15px;
+    padding-right: 10px;
+    border-radius: 15px;
+}
+
+.filtrar button {
+    border: none;
+    background-color: transparent;
+    transition: color 0.3s ease;
+}
+
+.filtrar button:hover {
+    color: var(--celeste);
+}
+
+.boton-informes {
+    border-radius: 20px;
+    border: 1px solid white;
+    padding: 7px 20px;
+    margin-top: 20px;
+    color: #FFF;
+    font-size: 13px;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+.boton-informes:hover {
+    background-color: var(--gris-claro);
+}
+
+
+
+.boton-inicio {
+    background-color: var(--gris-claro);
+    border-radius: 5px;
+    padding: 7px 30px;
+    color: #FFF;
+    font-size: 15px;
+    text-transform: uppercase;
+    text-align: center;
+    transition: color 0.3s;
+    text-decoration: none;
+}
+
+.boton-inicio:hover {
+    color: var(--textos);
+}
+
+
+
+
+/*MAIN-------------------------------------------------*/
+main {
+    margin: 20px;
+}
+
+
+.texto-path {
+    font-size: 14px;
+    font-family: 'Roboto';
+    color: var(--celeste);
+
+}
+
+
+
+.sec-contenido {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
 }
 
 .add-informe {
-    background-color: hsla(0, 1%, 51%, 0.923);
-    color: rgb(255, 255, 255);
-    font-weight: 800;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 35px;
-    font-size: small;
-    margin-right: 100px;
-    text-decoration: none;
-    justify-content: center;
-    align-self: center;
-    align-items: center;
-}
-
-
-.paso-generales {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 50px;
-}
-
-h4 {
-    font-weight: 1000;
-    height: auto;
-    border: none;
+    justify-content: center;
+    background-color: var(--gris-claro);
+    font-size: 10px;
+    padding: 5px;
     border-radius: 5px;
-    padding: 10px 20px;
+    width: fit-content;
+    height: fit-content;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-informe input {
+    background-color: transparent;
+    outline: none;
     color: white;
+    padding: 5px;
+    cursor: pointer;
+    border: none;
+    text-transform: uppercase;
+    transition: color 0.3s;
+}
+
+.add-informe input:hover {
+    color: var(--textos);
+}
+
+.carteles {
+    display: flex;
+    flex-direction: row;
 
 }
 
-.mesas-computadas {
-    background-color: rgb(75, 193, 240);
-    padding: 30px 30px;
+.mesas-escrutadas {
+    display: flex;
+    background-color: var(--celeste);
+    margin: 15px;
+    width: 184px;
+    height: 70px;
+    color: #fff;
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
+    font-size: 15px;
+
 }
+
 
 .electores {
-    background-color: rgb(236, 55, 181);
-    padding: 30px 50px;
-}
-
-.part {
-    background-color: rgb(158, 51, 240);
-    padding: 30px 50px;
-}
-
-.cuadro-agrupacion {
-    display: grid;
-
-    background-color: #fff;
-}
-
-footer {
-    background-color: rgb(59, 59, 59);
-    color: rgb(99, 96, 96);
-    display: block;
-    padding: 20px;
-
-}
-
-.Ministerio {
-    width: 150px;
-    height: 45px;
-}
-
-.logoFooter {
-    width: 150px;
-    height: 45px;
-}
-
-.logos {
-    width: 150px;
-    height: 45px;
-}
-
-h4 {
-    flex-direction: row-reverse;
+    display: flex;
+    background-color: var(--magenta);
+    margin: 15px;
+    width: 184px;
+    height: 70px;
+    color: #fff;
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
     font-size: 15px;
 }
 
-.menu-nav ul li i {
-    padding: auto auto;
-    margin: auto;
+
+.participacion {
+    display: flex;
+    background-color: var(--morado);
+    margin: 15px;
+    width: 184px;
+    height: 70px;
+    color: #fff;
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
+    font-size: 15px;
 }
+
+
+/*AVANCE 1-12 CABECERA Y PRIMER PARTE DEL MAIN HECHAS*/
+
 
 .cuadro-agrupacion {
-    display: inline-block;
-    justify-content: center;
-    background-color: #fff;
-    border: solid;
-    border-width: 1px;
-    border-color: #333;
-    margin-top: 100px;
-    margin-left: 10px;
-    text-decoration: none;
-    height: 400px;
-    width: 350px;
-    padding: 3rem;
-
-}
-
-.cuadro-agrupacion .corrientes-png {
-    margin-left: 50px;
-}
-
-table {
-    border-collapse: separate;
-    border-spacing: 30px;
-    /* Espaciado entre celdas (en píxeles u otra unidad) */
-}
-
-table caption {
-    font-size: large;
-    font-weight: bold;
-    justify-content: start;
-}
-
-.graficos {
-    position: relative;
-    margin-left: auto;
-    margin-top: -500px;
-    width: 380px;
-    height: 490px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 5px;
+    margin-top: 20px;
     display: flex;
-    justify-content: initial;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.recuadro {
+    border-radius: 25px;
+    border: 1px var(--borde-Grilla) solid;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+    Padding: 1.8em 0 0 0;
+    text-align: center;
+    white-space: nowrap;
+}
+
+.titulo-recuadro {
+    font-weight: bold;
+    padding: 1.8em 0 0 0;
+    text-align: center;
+    white-space: nowrap;
+}
+
+.scroll-vertical {
+    overflow-y: scroll;
+    height: 325px;
+}
+
+.texto-agrupaciones {
+    font-size: 11px;
+    color: var(--textos);
+    padding: 5px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.titulo-agrupacion {
+    font-size: 12px;
+    font-weight: bold;
+    border-bottom: 1px solid var(--borde-Grilla);
+    margin-bottom: 10px;
 }
 
 .bar {
-    flex-grow: 1;
-    background-color: #3498db;
-    margin: 0 5px;
-    transition: height 0.5s, background-color 0.5s;
+    height: 35px;
+    width: var(--bar-value);
+    background-color: var(--bar-color);
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.sec-titulo{
+    display: flex;
+    justify-content: center;
+}
+h3:first-child {
+    color: white;
+    background-color: var(--mensaje-usuario-verde); 
+    border-width: 200px;
+    margin-right: 400px;
+    margin-left: 400px;
+    Padding: 15px;
+    Border-radius: 10px;
+    font-size:20px;
+    font-weight: 200;
+    text-align: center;
+
 }
 
-.bar:hover {
-    background-color: #2980b9;
+h3:nth-child(2) {
+    color: white;
+    background-color: var(--mensaje-usuario-amarillo);
+    border-width: 200px;
+    margin-right: 400px;
+    margin-left: 400px;
+    Padding: 15px;
+    Border-radius: 10px;
+    font-size:20px;
+    font-weight: 200;
+    text-align: center;
+}
+
+h3:nth-child(3) {
+    color: white;
+    background-color: var(--mensaje-usuario-rojo);
+    border-width: 200px;
+    margin-right: 400px;
+    margin-left: 400px;
+    Padding: 15px;
+    Border-radius: 10px;
+    font-size:20px;
+    font-weight: 200;
+    text-align: center;
 }
